commit onto code plus

--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,15 @@
-$RECYCLE.BIN/
-atlassian-ide-plugin.xml
-bin/
-buildNumber.properties
-cmake-build-*/
-com_crashlytics_export_strings.xml
-crashlytics-build.properties
-crashlytics.properties
-dependency-reduced-pom.xml
-DerivedData/MiMiNavigator/Build/Intermediates.noindex/*
-DerivedData/MiMiNavigator/Index.noinde/*
-ehthumbs_vista.db
-ehthumbs.db
-fabric.properties
-local.properties
-out/
-pom.xml.next
-pom.xml.releaseBackup
-pom.xml.tag
-pom.xml.versionsBackup
-release.properties
-target/
-Thumbs.db
-Thumbs.db:encryptable/
-tmp/
-**/Index.noindex
+*.dSYM
+*.dSYM.zip
+*.hmap
+*.ipa
+.build/
+/.idea
+/DerivedData/
+Carthage/Build/
+fastlane/Preview.html
+fastlane/report.xml
+fastlane/screenshots/**/*.png
+fastlane/test_output
+playground.xcworkspace
+timeline.xctimeline
+xcuserdata/
