try commit, remove .idea and build tmp datas

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,21 @@
+.build/
 *.dSYM
 *.dSYM.zip
 *.hmap
 *.ipa
-.build/
-/.idea
-/DerivedData/
-Carthage/Build/
+*.mdb
+Carthage/Build/**
+DerivedData
+DerivedData/MiMiNavigator/Build/Intermediates.noindex/
+DerivedData/MiMiNavigator/Index.noindex
+DerivedData/MiMiNavigator/Index.noindex/Build/Intermediates.noindex/
+DerivedData/MiMiNavigator/Index.noindex/UniDB/MiMiNavigator.xcindex/
+DerivedData/MiMiNavigator/logs
 fastlane/Preview.html
 fastlane/report.xml
-fastlane/screenshots/**/*.png
 fastlane/test_output
 playground.xcworkspace
 timeline.xctimeline
+xcshareddata/
+xcuserdata/
 xcuserdata/
