--- a/MiMiNavigator/Info.plist
+++ b/MiMiNavigator/Info.plist
@@ -2,9 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>LastAccessedDate</key>
-	<date>2024-08-24T16:04:28Z</date>
-	<key>WorkspacePath</key>
-	<string>/Users/senat/Develop/MiMiNavigator/MiMiNavigator.xcodeproj</string>
+	<key>CFBundleDocumentTypes</key>
+	<array>
+		<dict/>
+	</array>
 </dict>
 </plist>
