refresh .gitignore for Xcode

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,21 @@
+!*.xcodeproj/xcshareddata/xcschemes/*.xcscheme
 .build/
+.xcshareddata/
+.xcuserdata/
 *.dSYM
 *.dSYM.zip
 *.hmap
 *.ipa
 *.mdb
+*.xcactivitylog
+*.xcodeproj/project.xcsettings
+*.xcodeproj/project.xcworkspace/
+*.xcodeproj/xcshareddata/xcschemes/*
+*.xcodeproj/xcuserdata/
+*.xcscmblueprint
+*.xcuserdata
+*.xcworkspace
+/.idea/
 Carthage/Build/**
 DerivedData
 DerivedData/MiMiNavigator/Build/Intermediates.noindex/
@@ -14,9 +26,8 @@ DerivedData/MiMiNavigator/logs
 fastlane/Preview.html
 fastlane/report.xml
 fastlane/test_output
+Package.resolved
+Packages/
 playground.xcworkspace
+Pods/
 timeline.xctimeline
-xcshareddata/
-xcuserdata/
-xcuserdata/
-/.idea/
