--- a/MiMiNavigator/MiMiNavigatorRelease.entitlements
+++ b/MiMiNavigator/MiMiNavigatorRelease.entitlements
@@ -1,34 +1,33 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<?xml version='1.0' encoding='UTF-8'?>
 <plist version="1.0">
 <dict>
 	<key>com.apple.security.app-sandbox</key>
-	<true/>
+	<true />
 	<key>com.apple.security.assets.movies.read-write</key>
-	<true/>
+	<true />
 	<key>com.apple.security.assets.music.read-write</key>
-	<true/>
+	<true />
 	<key>com.apple.security.assets.pictures.read-write</key>
-	<true/>
+	<true />
 	<key>com.apple.security.automation.apple-events</key>
-	<true/>
+	<true />
 	<key>com.apple.security.cs.allow-dyld-environment-variables</key>
-	<true/>
+	<true />
 	<key>com.apple.security.cs.allow-jit</key>
-	<true/>
+	<true />
 	<key>com.apple.security.cs.allow-unsigned-executable-memory</key>
-	<true/>
+	<true />
 	<key>com.apple.security.cs.debugger</key>
-	<true/>
+	<true />
 	<key>com.apple.security.cs.disable-executable-page-protection</key>
-	<true/>
+	<true />
 	<key>com.apple.security.cs.disable-library-validation</key>
-	<true/>
+	<true />
 	<key>com.apple.security.files.downloads.read-write</key>
-	<true/>
+	<true />
 	<key>com.apple.security.files.user-selected.read-write</key>
-	<true/>
+	<true />
 	<key>com.apple.security.personal-information.photos-library</key>
-	<true/>
+	<true />
 </dict>
-</plist>
+<key>com.apple.security.app-sandbox</key><true /><key>com.apple.security.network.client</key><true /><key>com.apple.security.network.server</key><true /><key>com.apple.security.files.user-selected.read-write</key><true /><key>com.apple.developer.icloud-services</key><array><string>CloudDocuments</string><string>CloudKit</string></array><key>com.apple.developer.ubiquity-kvstore-identifier</key><string>$(TeamIdentifierPrefix)com.example.MyApp</string></plist>
