fixing/refact. on basis old src

--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,33 @@
-timeline.xctimeline
-theme-settings.json
-Tests/LinuxMain.swift
-public/
-Pods/
-playground.xcworkspace
-Packages/
-Package.resolved
-generate-package-api-docs.swift
-fastlane/test_output
-fastlane/report.xml
-fastlane/Preview.html
-DerivedData/
-Carthage/Build/**
-/.idea/
-*.xcworkspace
-*.xcuserdata
-*.xcscmblueprint
-*.xcodeproj/xcuserdata/
-*.xcodeproj/xcshareddata/xcschemes/*
-*.xcodeproj/project.xcworkspace/
-*.xcodeproj/project.xcsettings
-*.xcodeproj
-*.xcactivitylog
-*.mdb
-*.ipa
-*.hmap
-*.dSYM.zip
-*.dSYM
-.xcuserdata/
-.xcshareddata/
-.vscode
-.swiftpm
-.index-build
-.DS_Store
-.cache/
-.build/
 !*.xcodeproj/xcshareddata/xcschemes/*.xcscheme
+.build/
+.xcshareddata/
+.xcuserdata/
+*.dSYM
+*.dSYM.zip
+*.hmap
+*.ipa
+*.mdb
+*.xcactivitylog
+*.xcodeproj/project.xcsettings
+*.xcodeproj/project.xcworkspace/
+*.xcodeproj/xcshareddata/xcschemes/*
+*.xcodeproj/xcuserdata/
+*.xcscmblueprint
+*.xcuserdata
+*.xcworkspace
+/.idea/
+Carthage/Build/**
+DerivedData
+DerivedData/MiMiNavigator/Build/Intermediates.noindex/
+DerivedData/MiMiNavigator/Index.noindex
+DerivedData/MiMiNavigator/Index.noindex/Build/Intermediates.noindex/
+DerivedData/MiMiNavigator/Index.noindex/UniDB/MiMiNavigator.xcindex/
+DerivedData/MiMiNavigator/logs
+fastlane/Preview.html
+fastlane/report.xml
+fastlane/test_output
+Package.resolved
+Packages/
+playground.xcworkspace
+Pods/
+timeline.xctimeline
