--- a/MiMiNavigator/Info.plist
+++ b/MiMiNavigator/Info.plist
@@ -4,36 +4,11 @@
 <dict>
 	<key>CFBundleDocumentTypes</key>
 	<array>
-		<dict>
-			<key>CFBundleTypeName</key>
-			<string>Text Document</string>
-			<key>CFBundleTypeRole</key>
-			<string>Editor</string>
-			<key>LSItemContentTypes</key>
-			<array>
-				<string>public.plain-text</string>
-			</array>
-			<key>LSHandlerRank</key>
-			<string>Default</string>
-		</dict>
+		<dict/>
 	</array>
-
 	<key>NSServices</key>
 	<array>
-		<!-- Пример службы. Удали или измени по необходимости -->
-		<dict>
-			<key>NSMenuItem</key>
-			<dict>
-				<key>default</key>
-				<string>My Custom Service</string>
-			</dict>
-			<key>NSMessage</key>
-			<string>handleService:</string>
-			<key>NSSendTypes</key>
-			<array>
-				<string>NSStringPboardType</string>
-			</array>
-		</dict>
+		<dict/>
 	</array>
 </dict>
 </plist>
