--- a/.periphery.yml
+++ b/.periphery.yml
@@ -1,8 +1,5 @@
-//
-//  Untitled.swift
-//  MiMiNavigator
-//
-//  Created by Iakov Senatov on 19.04.25.
-//  Copyright © 2025 Senatov. All rights reserved.
-//
-
+project: MiMiNavigator.xcodeproj
+schemes:
+  - MiMiNavigator
+report-exclude:
+  - "**/*[Pp]review*.swift"
