--- a/Gui/.prettyswift.yaml
+++ b/Gui/.prettyswift.yaml
@@ -7,11 +7,20 @@
 //
 
 lineLength: 155
-tabSize: 23
+tabSize: 4
 useTabs: false
 spaceAfterColon: true
 spaceBeforeColon: true
+spaceAroundOperators: true
+spaceAfterComma: true
+braceStyle: sameLine
 lineBreakBeforeEachArgument: false
 lineBreakBeforeEachGenericRequirement: false
+collapseArgumentsIfPossible: true
+indentWrappedArguments: true
+alignColons: true
+alignTypeDeclarations: true
+blankLineBeforeReturn: true
+blankLineBeforeMembers: true
 removeTrailingWhitespace: true
 ensureTrailingNewlineAtEOF: true
