--- a/.periphery.yml
+++ b/.periphery.yml
@@ -1,32 +1,13 @@
+# MiMiNavigator / Periphery
 project: MiMiNavigator.xcodeproj
-workspace: MiMiNavigator.xcworkspace
-
 schemes:
   - MiMiNavigator
 
-analyze_targets:
-  - MiMiNavigator
+clean_build: true
+skip_build: false
 
 retain_public: true
+retain_objc_accessible: true
 retain_assign_only_properties: true
-enable_test_target_analysis: true
 
-retain_patterns:
-  - ".*View$"
-  - ".*Model$"
-  - ".*Controller$"
-
-exclude_targets:
-  - MiMiNavigatorTests
-
-exclude_files:
-  - "Tests/*"
-  - "Scripts/*"
-  - "**/*.generated.swift"
-
-report_exclude:
-  - "Carthage/*"
-  - "Pods/*"
-
-format: xcode
-strict: true
+strict: false
