--- a/.periphery.yml
+++ b/.periphery.yml
@@ -3,11 +3,37 @@ project: MiMiNavigator.xcodeproj
 schemes:
   - MiMiNavigator
 
-clean_build: true
+clean_build: true           # точнее, но медленнее
 skip_build: false
 
-retain_public: true
+# Если это НЕ библиотека и ты не обещаешь public API наружу — выключи retain_public.
+# Иначе Periphery начнет ловить даже публичные, но неиспользуемые символы.
+retain_public: false
+
 retain_objc_accessible: true
 retain_assign_only_properties: true
 
-strict: false
+# Строгий режим: больше находок, но будь готов к спорным кейсам.
+strict: true
+
+# Формат отчета, удобно видеть прямо в Xcode-стиле
+output_format: xcode
+
+# Не мусорить отчетом по тестам/ресурсам/генерации/внешним зависимостям
+report_exclude:
+  - "^Tests/"
+  - "^.*\\.xcodeproj/"
+  - "^Resources/"
+  - "^Generated/"
+  - "^Build/"
+  - "^\\.build/"
+  - "^Pods/"
+  - ".*\\.generated\\.swift$"
+  - ".*\\+Generated\\.swift$"
+
+# Явно исключи авто-сгенерированные и сторонние каталоги из анализа,
+# чтобы не ловить ложные «паразиты».
+exclude_targets:
+  - "Pods"
+  - "PackageDependencies"     # если появится
+  - "MiMiNavigatorTests"      # анализировать тесты обычно бессмысленно
