--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,23 +8,23 @@ jobs:
   build:
     name: Build and Test
     runs-on: macos-15
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+
     - name: Select Xcode version
       run: sudo xcode-select -s /Applications/Xcode_16.1.app/Contents/Developer
-    
+
     - name: Show Xcode version
       run: xcodebuild -version
-    
+
     - name: Show Swift version
       run: swift --version
-    
+
     - name: Install xcpretty
       run: gem install xcpretty
-    
+
     - name: Build project
       run: |
         xcodebuild clean build \
@@ -33,7 +33,7 @@ jobs:
           -configuration Debug \
           CODE_SIGNING_ALLOWED=NO \
           | xcpretty
-    
+
     - name: Run tests
       run: |
         xcodebuild test \
@@ -46,27 +46,27 @@ jobs:
   lint:
     name: SwiftLint
     runs-on: macos-15
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+
     - name: Install SwiftLint
       run: brew install swiftlint
-    
+
     - name: Run SwiftLint
-      run: swiftlint lint --strict
+      run: swiftlint lint
   format:
     name: Swift Format Check
     runs-on: macos-15
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-    
+
     - name: Select Xcode version
       run: sudo xcode-select -s /Applications/Xcode_16.1.app/Contents/Developer
-    
+
     - name: Check formatting
       run: |
         swift-format lint --recursive Gui/Sources
