Update CI workflow to use macos-latest

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build-and-quality:
     name: Build, Test & Quality Checks
-    runs-on: macos-15
+    runs-on: macos-latest
 
     steps:
     - name: Checkout code
