chore: add squash_to.zsh — squash unpushed commits to a given commit ID

--- a/MiMiNavigator.entitlements
+++ b/MiMiNavigator.entitlements
@@ -18,6 +18,7 @@
 	<array>
 		<string>com.apple.finder</string>
 		<string>com.apple.Terminal</string>
+		<string>com.apple.dt.FileMerge</string>
 	</array>
 	<key>com.apple.security.network.client</key>
 	<true/>
