--- a/GUI/MiMiNavigatorRelease.entitlements
+++ b/GUI/MiMiNavigatorRelease.entitlements
@@ -12,10 +12,13 @@
 	<true/>
 	<key>com.apple.security.files.user-selected.read-write</key>
 	<true/>
+	<key>com.apple.security.automation.apple-events</key>
+	<true/>
 	<key>com.apple.security.temporary-exception.apple-events</key>
 	<array>
 		<string>com.apple.finder</string>
 		<string>com.apple.systemevents</string>
+		<string>com.apple.dt.FileMerge</string>
 	</array>
 	<key>com.apple.security.temporary-exception.files.absolute-path.read-write</key>
 	<array>
