UI: focus ring as overlay with inset(0.75) — never clipped by parent bounds
UI: restore panel focus ring — thin 1pt pale orange on active panel

fix: menu actions — Button instead of TopMenuItemView in Menu{}, strong AppStateProvider, toggle diagnostic prints

fix: remove duplicate @MainActor on netMenuCategory

fix: eliminate NetService Sendable data races — extract values before Task @MainActor boundary

feat: Network Neighborhood — opens native NetworkNeighborhoodView sheet via AppState.showNetworkNeighborhood

build: add NetworkKit to pbxproj — PBXBuildFile, Frameworks phase, package product dependency

fix: replace deprecated activate(options:) with activate() — macOS 14+

fix: Network Neighborhood — activate Finder after open to bring it to foreground

feat: add NetworkKit package — Bonjour discovery, SMBMounter, NetworkNeighborhoodView; fix .gitignore to track local packages

fix: netMenuCategory missing @MainActor — NSWorkspace.open was silently ignored

UI: focus ring inset 4pt — ~1mm from app edge

feat: Network Neighborhood opens nwnode://domain-browser in Finder; remove toggle diagnostic prints

fix: toggleFocus() — direct focusedPanel mutation, no weak-ref chain through selectionManager

fix: TopMenuMetadata — markByPattern() no args, activeTab non-optional

fix: Pack uses filesForOperation() — works with selection AND marks

fix: replace deprecated activate(options:) with activate() in NetworkMountService

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,10 @@ fastlane/Preview.html
 fastlane/report.xml
 fastlane/test_output
 Package.resolved
-Packages/
+# Local SPM resolved packages cache — but track our own local packages
+.build/
+# Packages/   ← removed: Packages/ contains our local SPM packages (FavoritesKit, NetworkKit)
+
 playground.xcworkspace
 Pods/
 timeline.xctimeline
